# localflow

./: .gitignore  README.md  SECURITY.md  USAGE.md  __init__.py  config.py  config.yml.example  daemon_manager.py  events.py  events_db_util.py  executor.py  install-script.py  lf  localflow  localflow.py  monitor_service.py  pyproject.toml  pytest.ini  requirements.txt  schema.py  setup.py  test_daemon_manager.py  test_events.py  test_localflow.py  test_monitor_service.py  test_schema.py  utils.py
cli/: __init__.py  main.py
cli/commands/: __init__.py
core/: __init__.py  schema.py  utils.py
docs/: USAGE.md
localflow/: cli.py  config.py  docker.py  utils.py
services/: __init__.py
services/daemon/: __init__.py  service.py
services/events/: __init__.py  monitor.py  registry.py
services/workflow/: registry.py
tests/: __init__.py  conftest.py  test_cli.py  test_executor.py  test_schema.py  test_utils.py
tests/unit/: test_daemon.py  test_localflow.py
