[tool.poetry]
name = "localflow"
version = "0.1.0"
description = "LocalFlow: A lightweight, flexible, and locally executable workflow automation tool."
authors = ["Araray Velho <araray@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
docker = "^6.0"
rich = "^13.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
localflow = "localflow.cli:cli"

